Add build script

--- a/ThinkTel.uControl.Cdrs/ThinkTel.uControl.Cdrs.nuspec
+++ b/ThinkTel.uControl.Cdrs/ThinkTel.uControl.Cdrs.nuspec
@@ -1,8 +1,8 @@
 <?xml version="1.0"?>
-<package >
+<package>
   <metadata>
     <id>ThinkTel.uControl.Cdrs</id>
-    <version>1.0.0</version>
+    <version>1.0.1</version>
     <authors>Paul Vaillant</authors>
 	<language>en-us</language>
     <licenseUrl>https://raw.githubusercontent.com/thinktel/ThinkTel.uControl.Cdrs/master/LICENSE.txt</licenseUrl>
@@ -14,6 +14,6 @@
     <tags>ThinkTel uControl CDR</tags>
   </metadata>
   <files>
-	<file src="ThinkTel.uControl.Cdrs\bin\release\ThinkTel.uControl.Cdrs.dll" target="lib\net45" />
+	<file src="bin\release\ThinkTel.uControl.Cdrs.dll" target="lib\net45" />
   </files>
 </package>
